RF.4 Redux y Consulta MockupApi

--- a/src/styles/scss/Fe.scss
+++ b/src/styles/scss/Fe.scss
@@ -7,4 +7,5 @@
 @import './modules/components/list';
 @import './modules/components/icons';
 @import './modules/components/selects';
+@import './modules/components/table';
 @import './modules/utils/utils';
